# controllers/controllers.go
@@ -1,6 +1,8 @@
 package controllers
 
 import (
+	"fmt"
+	"strconv"
 	"time"
 
 	"github.com/Rahmatuldani/assignment2/data/response"
@@ -32,6 +34,7 @@ func NewController(model models.ModelsInterface, validate *validator.Validate) *
 // @Failure 500 {object} response.ErrorResponse
 // @Router /orders [get]
 func (m *ControllerStruct) GetOrders(ctx *gin.Context) {
+	fmt.Println("Here1")
 	result, err := m.model.FindAll()
 	if err != nil {
 		ctx.JSON(500, response.ErrorResponse{Error: err.Error()})
@@ -72,4 +75,43 @@ func (m *ControllerStruct) CreateOrder(ctx *gin.Context) {
 	}
 	
 	ctx.JSON(200, req)
+}
+
+// Orders godoc
+// @Summary 	Delete order
+// @Schemes
+// @Description Delete order
+// @Tags 		Orders
+// @Accept 		json
+// @Produce 	json
+// @Param 		id path int true "Id"
+// @Success 	200 {object} response.WebResponse
+// @Failure 	400 {object} response.ErrorResponse
+// @Failure 	500 {object} response.ErrorResponse
+// @Router 		/orders/{id} [delete]
+func (m *ControllerStruct) DeleteOrder(ctx *gin.Context) {
+	fmt.Println("Here2")
+	id := ctx.Param("id")
+	aid, err := strconv.ParseUint(id, 10, 64)
+	if err != nil {
+		ctx.JSON(400, response.ErrorResponse{
+			Status: "Bad Request",
+			Message: "Param id required",
+			Error: err.Error()})
+		return
+	}
+	
+	code, message, err := m.model.Delete(uint8(aid))
+	if err != nil {
+		ctx.JSON(code, response.ErrorResponse{
+			Status: "Error",
+			Message: message,
+			Error: err.Error()})
+		return
+	}
+	
+	ctx.JSON(code, response.WebResponse{
+		Status: "OK",
+		Message: message,
+	})
 }
