# data/response/response.go
@@ -15,3 +15,9 @@ type OrderResponse struct {
 	OrderedAt time.Time      `json:"orderedAt"`
 	Items     []ItemResponse `json:"items"`
 }
+
+type WebResponse struct {
+	Status	string 		`json:"status"`
+	Message	string 		`json:"message"`
+	Data	interface{} `json:"data,omitempty"`
+}
